Added img dir and favicon.ico.

--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,10 @@ api_version: 1
 handlers:
 - url: /css
   static_dir: css
+  
+- url: /favicon.ico
+  static_files: img/favicon.ico
+  upload: img/favicon.ico
 
 - url: .*
   script: main.py
