--- a/app.yaml
+++ b/app.yaml
@@ -21,3 +21,7 @@ handlers:
 - url: /loadhistorical
   script: main.py
   login: admin
+
+- url: /remote_api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin
