--- a/cron.yaml
+++ b/cron.yaml
@@ -3,3 +3,11 @@ cron:
   url: /scrape
   schedule: every day 09:00
   timezone: Australia/NSW
+- description: Scrape NASA data and consolidate locally
+  url: /scrape
+  schedule: every day 09:01
+  timezone: Australia/NSW
+- description: Scrape NASA data and consolidate locally
+  url: /scrape
+  schedule: every day 09:02
+  timezone: Australia/NSW
